project tree: layout issue with deeply nested widgets

--- a/src/scss/ui/tree.scss
+++ b/src/scss/ui/tree.scss
@@ -17,7 +17,8 @@
         list-style: none;
         position: relative;
         padding-left: 16rem;
-
+        display: inline-block;
+        
         ol:before {
             content: "";
             position: absolute;
